test/files/neg/package-ob-case.check
package-ob-case.scala:3: warning: it is not recommended to define classes/objects inside of package objects.
If possible, define class X in package foo instead.
    case class X(z: Int) { }
               ^
package-ob-case.scala:3: warning: class X should be placed directly in package foo instead of package object foo. Under some circumstances companion objects and case classes in package objects can fail to recompile. See https://issues.scala-lang.org/browse/SI-5954.
    case class X(z: Int) { }
               ^
error: No warnings can be incurred under -Xfatal-warnings.
two warnings found
one error found
